<resources>
    <string name="app_name">New FitnessTracker</string>
    <string name="imc">IMC</string>
    <string name="tmb">TMB</string>
    <string name="favorite_music">MUSICAS</string>
    <string name="motivation">MOTIVAÇAO</string>
    <string name="weight">peso (kg)</string>
    <string name="height">altura (cm)</string>
    <string name="imc_desc">IMC é a sigla para Índice de Massa Corporal que serve para avaliar o peso
        do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal,
        acima ou abaixo do peso desejado.\n\nPreencha os campos de peso e altura para descobrir o seu IMC</string>
    <string name="calc">Calcular</string>
    <string name="fields_message">Os campos devem ser preenchidos e diferente de zero</string>

    <string name="imc_severely_low_weight">Severamente abaixo do peso (Magreza Grau III)</string>
    <string name="imc_very_low_weight">Muito abaixo do peso (Magreza Grau II)</string>
    <string name="imc_low_weight">Abaixo do peso (Magreza Grau I)</string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso (Obesidade Grau I)</string>
    <string name="imc_severely_high_weight">Severamente obeso (Obesidade Grau II)</string>
    <string name="imc_extreme_weight">Extremamente obeso (Obesidade Grau III)</string>

    <string name="imc_response">Seu Imc: %1$.2f</string>
    <string name="tmb_response">Seu Tmb: %1$.2f</string>
    <string name="list_response">Seu Resultado: %1$.2f, Data: %2$s</string>
    <string name="save">Salvar</string>
    <string name="calc_saved">Registro salvo com sucesso</string>
    <string name="calc_removed">Registro removido com sucesso</string>
    <string name="search">Buscar</string>
    <string name="tmb_desc">TMB é o cálculo para descobrir a quantidade calórica que o corpo necessita com base no seu estilo de vida</string>
    <string name="age">Idade</string>
    <string name="delete_message">Você realmente quer excluir o registro?</string>
    <string name="cancel">Cancelar</string>
    <string name="masculine">Homem</string>
    <string name="feminine">Mulher</string>
</resources>