<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fitness"
    tools:context=".ImcActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/txtForm"
            android:text="@string/imc_desc" />

        <EditText
            android:id="@+id/edit_imc_weight"
            android:hint="@string/weight"
            style="@style/editForm"/>

        <EditText
            android:id="@+id/edit_imc_height"
            style="@style/editForm"
            android:hint="@string/height"/>

        <Button
            android:id="@+id/btn_imc_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calc"
            android:textSize="17sp"/>

    </LinearLayout>
</ScrollView>
