<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fitness"
    tools:context=".TmbActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/txtForm"
            android:text="@string/tmb_desc" />

        <EditText
            android:id="@+id/edit_tmb_weight"
            android:hint="@string/weight"
            style="@style/editForm"/>

        <EditText
            android:id="@+id/edit_tbm_height"
            style="@style/editForm"
            android:hint="@string/height"/>

        <EditText
            android:id="@+id/edit_tbm_age"
            style="@style/editForm"
            android:hint="@string/age"/>

<!--        <RadioGroup-->
<!--            android:id="@+id/btn_radio"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:layout_marginBottom="30dp">-->

<!--            <RadioButton-->
<!--                android:id="@+id/btn_masculine"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/masculine"-->
<!--                android:layout_marginEnd="10dp"-->
<!--                android:textSize="17sp"/>-->
<!--            <RadioButton-->
<!--                android:id="@+id/btn_feminine"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/feminine"-->
<!--                android:layout_marginStart="10dp"-->
<!--                android:textSize="17sp" />-->

<!--        </RadioGroup>-->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AutoTextViewForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/auto_lifestyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_tmb_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calc"
            android:textSize="17sp"/>

    </LinearLayout>
</ScrollView>